--- a/challenge1/style1.css
+++ b/challenge1/style1.css
@@ -23,3 +23,13 @@ h1, p {
     border: 5px solid orange;
     
 }
+
+.box2 {
+    background-color: aqua;
+    padding: 20px;
+}
+
+.box2-child {
+    background-color: bisque;
+    padding: 100px;
+}
