--- a/challenge2/style.css
+++ b/challenge2/style.css
@@ -1,43 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* INSTRUCTIONS
+ *
+ * 1) Keep the text inside .intro-content
+ *    in the same place, but have the background
+ *    extend from one side of the viewport
+ *    to the other, no matter how wide or narrow
+ *    the browser is.
+ *
+ * 2) Limit the maximum width of the text in the
+ *    bottom area.
+ *
+ * You may modify the HTML if needed
+ * (you probably should for this challenge)
+ *
+ */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.wrapper {
-    width: 80%;
-    max-width: 1200px;
-    margin: 0 auto;
+body {
+  font-family: sans-serif;
+}
+header {
+  background: #23424a;
+  color: white;
+  padding: 50px 0;
 }
 
-.header {
-    background-color: #23424a;
-    color: white;
-    padding: 50px 0;
+.container {
+  width: 80%;
+  max-width: 750px;
+  margin: 0 auto;
 }
+
+.intro-content {
+  width: 50%;
+}
+
 h1 {
+  margin-bottom: 16px;
+}
+section {
 
-    margin-bottom: 16px;
-    
+  padding: 16px 0;
 }
 
-
-.header-text{
-    width: 50%;
-}
-
-.hero {
-    margin-top: 20px;
-}
-
-.hero-text {
-    width: 70%;
+.section-text {
+  width: 90%;
 }
 
 h2 {
-    margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 p {
-    margin-bottom: 16px;
+  margin-bottom: 20px;
 }
